# COV-projekt

./: ModelRS.py  ModelSN.py  ModelTSN.py  README.md  kaggledownload.py  modelTSN.h5  pre-commit-config.yaml  projektCOV.py  pyproject.toml  requirements.txt  signTnames.csv
COV projekt/: ModelRS.py  cascade.xml  signTnames.csv
logs/: events.out.tfevents.1719942651.DESKTOP-1G5PNU8.2400.1  events.out.tfevents.1719942788.DESKTOP-1G5PNU8.7296.1  events.out.tfevents.1719942932.DESKTOP-1G5PNU8.20700.1
runs/Jul02_19-50-46_DESKTOP-1G5PNU8/: events.out.tfevents.1719942646.DESKTOP-1G5PNU8.2400.0  events.out.tfevents.1719942673.DESKTOP-1G5PNU8.2400.3
runs/Jul02_19-53-03_DESKTOP-1G5PNU8/: events.out.tfevents.1719942783.DESKTOP-1G5PNU8.7296.0  events.out.tfevents.1719942804.DESKTOP-1G5PNU8.7296.3
runs/Jul02_19-55-28_DESKTOP-1G5PNU8/: events.out.tfevents.1719942928.DESKTOP-1G5PNU8.20700.0
