[tool.poetry]
name = "cov projekt"
version = "0.1.0"
description = ""
authors = ["Szymon Kwidzinski s23662 <s23662@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "2.1.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
attrs = "23.2.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
contourpy = "1.2.1"
crashtest = "0.4.1"
cycler = "0.12.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
fonttools = "4.53.0"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
grpcio = "1.64.1"
identify = "2.5.36"
idna = "3.7"
importlib-metadata = "8.0.0"
installer = "0.7.0"
intel-openmp = "2021.4.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
keyring = "24.3.1"
kiwisolver = "1.4.5"
lightning-utilities = "0.11.3.post0"
markdown = "3.6"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
mkl = "2021.4.0"
more-itertools = "10.3.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
networkx = "3.3"
nodeenv = "1.9.1"
numpy = "1.26.4"
packaging = "24.1"
pexpect = "4.9.0"
pillow = "10.3.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
pre-commit = "3.7.1"
protobuf = "4.25.3"
ptyprocess = "0.7.0"
pyparsing = "3.1.2"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
pytorch-lightning = "2.3.1"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.9.4"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sympy = "1.12.1"
tbb = "2021.13.0"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
tomlkit = "0.12.5"
torch = "2.3.1"
torchmetrics = "1.4.0.post0"
torchvision = "0.18.1"
tqdm = "4.66.4"
trove-classifiers = "2024.7.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
werkzeug = "3.0.3"
yarl = "1.9.4"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
